[#] ensure that 'www-data' user exist

--- a/root/etc/nginx/nginx.conf
+++ b/root/etc/nginx/nginx.conf
@@ -23,8 +23,8 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    access_log syslog:server=unix:/dev/log,facility=daemon,nohostname;
-    error_log syslog:server=unix:/dev/log,facility=daemon,nohostname;
+    access_log syslog:server=unix:/dev/log,facility=daemon;
+    error_log syslog:server=unix:/dev/log,facility=daemon;
 
     gzip on;
     gzip_disable "msie6";
